--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-
 NODE_ENV = development
+
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET='backendProjectFN132;'
+
+MONGO_URI=mongodb+srv://userRestGo:user06RestGo@cluster0.fsrvdia.mongodb.net/RestGo?retryWrites=true&w=majority&appName=Cluster0
