--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.3.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
