--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.2.0",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.28",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
@@ -21,7 +24,8 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
