--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sonner": "^1.4.41"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
