--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
