--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@vercel/static-build": "2.0.1",
+    "@vercel/node":"3.0.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
@@ -20,6 +22,7 @@
     "avvvatars-react": "^0.4.2",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.28",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
