--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@vercel/static-build": "2.0.1",
-    "@vercel/node":"3.0.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
+    "@vercel/node": "3.0.1",
+    "@vercel/static-build": "2.0.1",
     "avvvatars-react": "^0.4.2",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
@@ -30,6 +30,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "rheostat": "^4.1.1",
     "sonner": "^1.4.41",
     "styled-components": "^6.1.8"
   },
@@ -38,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rheostat": "^3.0.6",
     "autoprefixer": "^10.0.1",
     "cypress": "^13.7.3",
     "eslint": "^8",
