--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-cloud/local-auth": "^3.0.1",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
@@ -25,15 +26,20 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.28",
+    "fs": "^0.0.1-security",
+    "googleapis": "^134.0.0",
+    "googleauth": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "net": "^1.0.2",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "rheostat": "^4.1.1",
     "sonner": "^1.4.41",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tls": "^0.0.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
