--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "rheostat": "^4.1.1",
