--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "flowbite-react": "^0.9.0",
     "framer-motion": "^11.0.28",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
@@ -37,7 +38,8 @@
     "react-dom": "^18",
     "rheostat": "^4.1.1",
     "sonner": "^1.4.41",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
