--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
+    "@types/nodemailer": "^6.4.14",
     "@vercel/node": "3.0.1",
     "@vercel/static-build": "2.0.1",
     "avvvatars-react": "^0.4.2",
@@ -33,6 +34,7 @@
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.13",
     "pnpm": "^9.0.6",
     "react": "^18",
     "react-dom": "^18",
