--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-swagger-doc": "^0.4.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "pnpm": "^9.0.6",
@@ -42,6 +43,7 @@
     "rheostat": "^4.1.1",
     "sonner": "^1.4.41",
     "styled-components": "^6.1.8",
+    "swagger-ui-react": "^5.17.2",
     "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
