--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/rheostat": "^3.0.6",
+    "@types/swagger-ui-react": "^4.18.3",
     "autoprefixer": "^10.0.1",
     "cypress": "^13.7.3",
     "eslint": "^8",
